--- a/public/routes-list.html
+++ b/public/routes-list.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- update the version number as needed -->
     <script defer src="/__/firebase/9.3.0/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
     <script defer src="/__/firebase/9.3.0/firebase-auth-compat.js"></script>
     <script defer src="/__/firebase/9.3.0/firebase-database-compat.js"></script>
     <script defer src="/__/firebase/9.3.0/firebase-firestore-compat.js"></script>
@@ -15,27 +13,16 @@
     <script defer src="/__/firebase/9.3.0/firebase-analytics-compat.js"></script>
     <script defer src="/__/firebase/9.3.0/firebase-remote-config-compat.js"></script>
     <script defer src="/__/firebase/9.3.0/firebase-performance-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
     <title>Location Tracker</title>
-    <!-- <link rel="stylesheet" href="assets/leaflet/leaflet.css"/> -->
-    <!-- <link rel="stylesheet" href="assets/leaflet-routing-machine-3.2.12/dist/leaflet-routing-machine.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <!-- <script src="assets/leaflet/leaflet.js" defer></script> -->
-    <!-- <script src="assets/leaflet-routing-machine-3.2.12/dist/leaflet-routing-machine.js" defer></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="../node_modules/@firebase/app/dist/index.cjs.js"></script>
-    <script src="./assets/js/firebase.js"></script>
-    <script src="./assets/js/app.js" defer></script>
+    <script src="./assets/js/routes.js"></script>
     
   </head>
   <body class="position-relative">
-    <div id="map"></div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light rounded-3 position-absolute header shadow">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Location Tracker</a>
@@ -51,11 +38,6 @@
         </div>
       </div>
     </nav>
-    <div class="position-absolute footer bg-light rounded-3 shadow p-3 d-flex flex-column">
-      <p class="text-center d-none" id="text-distance"></p>
-      <button class="btn btn-primary m-auto" type="button" id="startTrackingBtn">Start tracking</button>
-      <button class="btn btn-danger m-auto d-none" type="button" id="stopTrackingBtn">Stop tracking</button>
-    </div>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChZXDPZZW3HJIBpCtC7cJ6XAk_EGvofwc&libraries=geometry&callback=initMap"></script>
+
   </body>
 </html>
